@@ -347,19 +347,19 @@ var // currently active contextMenu trigger
         layerClick: function(e) {
             var $this = $(this),
                 root = $this.data('contextMenuRoot'),
-                mouseup = false,
+                //mouseup = false,
                 button = e.button,
                 x = e.pageX,
                 y = e.pageY,
                 target, 
-                offset,
-                selectors;
+                offset;
+                //selectors;
                 
             e.preventDefault();
-            e.stopImmediatePropagation();
+            //e.stopImmediatePropagation();
             
             setTimeout(function() {
-                var $window, hideshow, possibleTarget;
+                var $window;//, hideshow, possibleTarget;
                 var triggerAction = ((root.trigger == 'left' && button === 0) || (root.trigger == 'right' && button === 2));
                 
                 // find the element that would've been clicked, wasn't the layer in the way
@@ -787,7 +787,7 @@ var // currently active contextMenu trigger
     op = {
         show: function(opt, x, y) {
             var $trigger = $(this),
-                offset,
+                //offset,
                 css = {};
 
             // hide any open menus
