@@ -157,6 +157,8 @@ for reading.
 
 * Fixed bug with getting showed menu in firefox.
 
+* Commented e.stopImmediatePropagation() of function layerClick
+in contextmenu file, for correct work of context menu.
 
 2012.12.12, Version 0.1.8
 
